<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aci810-catedra2</string>
    <string name="action_settings">Settings</string>
    <string name="Registro">Register</string>
    <string name="TextView1">Email</string>
    <string name="email">Email</string>
    <string name="TextView2">Password</string>
    <string name="Password">Password</string>
    <string name="TextView3">User</string>
    <string name="Edad">Edad</string>
    <string name="user">User</string>
    <string name="masculino">M</string>
    <string name="femenino">F</string>
    <string name="otro">Otro</string>
    <string name="sexo">Sexo</string>
    <string name="editText2">Edad</string>
    <string name="PaisView">Pais</string>
    <string name="pais">Pais</string>
    <string name="Registro1">Register</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="Profile">Profile</string>
    <string name="Setting">Setting</string>
    <string name="title_activity_app_user">AppUser</string>
    <string name="user_act">User</string>
    <string name="userA">User</string>
    <string name="Profile1">Profile</string>
    <string name="email1">Email</string>
    <string name="emailView">Email</string>
    <string name="edad1">Edad</string>
    <string name="edadView">Edad</string>
    <string name="Login">Login</string>
    <string name="cambioPass">Cambio Pass</string>
    <string name="cambPais">Pais</string>
    <string name="paisView">Cambio Pais</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="guardar">guardar</string>

</resources>
