<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AppUser" >

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Profile1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
   <TextView
        android:id="@+id/user_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dip"
        android:hint="@string/user_act" />

	<TextView
        android:id="@+id/userA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/userA" />
        
    </LinearLayout>
    

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
   <TextView
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dip"
        android:hint="@string/email1" />

	<TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/emailView" />
        
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	
        		
   <TextView
        android:id="@+id/edad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dip"
        android:hint="@string/edad1" />

	<TextView
        android:id="@+id/edadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edadView" />
	
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/passwordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cambioPass" />

        <EditText
            android:id="@+id/password12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </LinearLayout>
       <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/paisView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/paisView" />

        <EditText
            android:id="@+id/camPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cambPais"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sexo" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otro" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>
